--- a/src/components/Experiences.css
+++ b/src/components/Experiences.css
@@ -6,6 +6,8 @@
   text-align: center;
 }
 
-.exp-div.h3 {
-  padding-top: 10em;
+.exp-table-col {
+  padding: 1em;
+  padding-left: 2em;
+  padding-right: 2em;
 }
