--- a/src/components/Abilities.css
+++ b/src/components/Abilities.css
@@ -1,3 +1,17 @@
 .abi-title {
   text-align: center;
 }
+
+.abi-div {
+  background-color: rgb(225, 235, 232);
+  padding-top: 2em;
+  padding-bottom: 2em;
+}
+
+.star-col {
+  text-align: right;
+}
+
+.skill-table-h3 {
+  text-align: center;
+}
