--- a/src/components/icons/Card.css
+++ b/src/components/icons/Card.css
@@ -13,6 +13,11 @@
   margin-bottom: 1em;
 }
 
+.card-btn {
+  border-radius: 0.3em;
+  width: 8em;
+}
+
 /* .card-img-top {
   max-width: 100%;
   height: auto;
