--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -6,13 +6,6 @@
   padding-bottom: 6em;
   margin-bottom: 0;
 }
-.person-wrapper {
-  margin-bottom: 2em;
-}
-
-.profile-pic {
-  width: 50%;
-}
 
 .btn-primary {
   background-image: none;
@@ -23,4 +16,9 @@
 
 h3 {
   margin-bottom: 1em;
+}
+
+.main-divs {
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
