--- a/src/components/Abilities.css
+++ b/src/components/Abilities.css
@@ -3,11 +3,11 @@
 }
 
 .abi-div {
-  background-color: rgb(225, 235, 232);
 }
 
 .star-col {
   text-align: right;
+  padding: 0;
 }
 
 .skill-table-h3 {
