--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,26 @@ div.container-fluid {
   padding-left: 0;
   padding-right: 0;
 }
+
+h3 {
+  margin-bottom: 0.5em;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+.btn {
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.col,
+p {
+  font-family: "Ubuntu", sans-serif;
+}
+
+p {
+  margin-bottom: 0.5em;
+}
