--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -14,11 +14,27 @@
   background-color: #2892d7;
 }
 
-h3 {
-  margin-bottom: 1em;
-}
-
 .main-divs {
   padding-top: 200px;
   padding-bottom: 200px;
+}
+
+.abi-div,
+.profile-div {
+  background-color: rgb(231, 252, 246);
+}
+.exp-div,
+.proj-div {
+  background-color: rgb(255, 255, 255);
+}
+
+h1,
+h2,
+h3,
+.exp-div.h4 {
+  color: rgb(65, 145, 118);
+}
+
+.exp-table-link {
+  color: rgb(55, 125, 101);
 }
