--- a/src/components/icons/Card.css
+++ b/src/components/icons/Card.css
@@ -1,19 +1,143 @@
-.card {
-  width: auto;
-  margin: 1em;
+.proj-card {
+  background-color: #fff;
+  border-radius: 26px;
+  overflow: hidden;
+  margin: 30px;
 }
 
-.card-text {
-  height: 7em;
-  margin-bottom: 1em;
+.proj-card-img-container {
+  width: 290px;
+  height: 290px;
+  background: url("/assets/proj-card-img-container.png");
+  background-size: contain;
 }
 
-.card-title {
-  height: 2em;
-  margin-bottom: 1em;
+.proj-card-img {
+  margin: 20%;
+  width: 55%;
 }
 
-.card-btn {
-  border-radius: 0.3em;
-  width: 8em;
+.proj-card-body {
+  width: 290px;
+  height: 290px;
+}
+
+.proj-card-title {
+  color: #49a3aa;
+  font-size: 25px;
+}
+
+.proj-card-text {
+  font-size: 16px;
+  white-space: pre-wrap;
+}
+
+.proj-card-btn {
+  width: 200px;
+  border-radius: 10px;
+  font-size: 15px;
+  color: #fff;
+  text-align: center;
+  padding: 7px;
+  background-color: #3298a0;
+}
+
+.proj-card-btn:hover {
+  opacity: 0.5;
+  background-color: #3298a0;
+  color: #fff;
+}
+
+@media (min-width: 576px) {
+  .proj-card {
+    border-radius: 15px;
+    margin: 20px;
+  }
+
+  .proj-card-img-container {
+    width: 250px;
+    height: 250px;
+  }
+
+  .proj-card-body {
+    width: 250px;
+    height: 250px;
+  }
+
+  .proj-card-text {
+    font-size: 12px;
+  }
+
+  .proj-card-btn {
+    width: 160px;
+    border-radius: 10px;
+    font-size: 12px;
+    padding: 6px;
+  }
+}
+@media (min-width: 768px) {
+  .proj-card {
+    border-radius: 18px;
+    margin: 25px;
+  }
+
+  .proj-card-img-container {
+    width: 300px;
+    height: 300px;
+  }
+
+  .proj-card-body {
+    width: 300px;
+    height: 300px;
+  }
+
+  .proj-card-title {
+    font-size: 34px;
+  }
+
+  .proj-card-text {
+    font-size: 18px;
+  }
+
+  .proj-card-btn {
+    width: 160px;
+    border-radius: 10px;
+    font-size: 15px;
+    padding: 6px;
+  }
+}
+@media (min-width: 992px) {
+  .proj-card {
+    border-radius: 2vw;
+    margin: 3vw;
+  }
+
+  .proj-card-img-container {
+    width: 27vw;
+    height: 27vw;
+  }
+
+  .proj-card-body {
+    width: 27vw;
+    height: 27vw;
+  }
+
+  .proj-card-title {
+    font-size: 2.5vw;
+  }
+
+  .proj-card-text {
+    font-size: 1.4vw;
+  }
+
+  .proj-card-btn {
+    width: 17vw;
+    border-radius: 0.7vw;
+    font-size: 1.4vw;
+    padding: 0.5vw;
+  }
+}
+@media (min-width: 1200px) {
+}
+@media (min-width: 1400px) {
 }
