--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,17 +1,26 @@
-.jumbotron {
-  /* background-image: url(/assets/me1.jpeg); */
+#jumbo {
+  width: 100%;
+  aspect-ratio: 1.1;
   text-align: center;
-  background-size: cover;
-  padding-top: 10em;
-  padding-bottom: 10em;
-  margin-bottom: 0;
+  background: url("/assets/hero-bg.png");
+  background-size: 2000px;
+  background-repeat: no-repeat;
+  background-position: center 95%;
+}
+
+#jumbo h1 {
+  color: white;
+  margin-top: 30%;
+}
+
+#jumbo p {
+  color: white;
 }
 
 .btn-primary {
   background-image: none;
   border: none;
   border-radius: 0;
-  background-color: #2892d7;
 }
 
 .main-divs {
@@ -44,4 +53,37 @@ h3,
 
 #main-container {
   background-color: #f8f8f8;
+}
+
+@media (min-width: 576px) {
+}
+@media (min-width: 768px) {
+  #jumbo {
+    aspect-ratio: 1.3;
+  }
+  #jumbo h1 {
+    color: white;
+    margin-top: 25%;
+  }
+}
+@media (min-width: 992px) {
+  #jumbo {
+    aspect-ratio: 1.7;
+    background-size: 200%;
+  }
+  #jumbo h1 {
+    color: white;
+    margin-top: 20%;
+  }
+}
+@media (min-width: 1200px) {
+}
+@media (min-width: 1400px) {
+  #jumbo {
+    aspect-ratio: 2.2;
+  }
+  #jumbo h1 {
+    color: white;
+    margin-top: 15%;
+  }
 }
