--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,25 +1,37 @@
 .contact-div {
+  padding-top: 15%;
+  padding-bottom: 10%;
+  margin-bottom: 0;
+  width: 100%;
+  aspect-ratio: 1.5;
+  text-align: center;
+  background: url("/assets/contact-bg.png");
+  background-size: 2000px;
+  background-repeat: no-repeat;
+  background-position: center 10%;
 }
+
 .contact-title {
   text-align: center;
   color: rgba(255, 255, 255, 0.872);
 }
-.contact-title-h2 {
-  text-align: center;
+.contact-div h2 {
   color: white;
 }
-.contact-hr {
-  margin: 40px;
+
+.contact-div p {
+  color: white;
 }
 
 .contact-icon {
-  width: 2em;
-  margin: 1em;
+  width: 60px;
+  margin: 30px;
+  margin-bottom: 10px;
 }
 
 .contact-text {
   font-family: "Roboto Condensed", sans-serif;
-  font-size: larger;
+  font-size: 15;
 }
 .contact-btn {
   color: white;
@@ -33,4 +45,28 @@
   color: white;
   opacity: 0.7;
   text-decoration: none;
+}
+
+@media (min-width: 576px) {
+}
+@media (min-width: 768px) {
+  .contact-div {
+    aspect-ratio: 1.9;
+    background-position: center 8%;
+  }
+}
+@media (min-width: 992px) {
+  .contact-div {
+    aspect-ratio: 2.1;
+    background-size: 200%;
+    background-position: center 7%;
+  }
+}
+@media (min-width: 1200px) {
+  .contact-div {
+    aspect-ratio: 2.5;
+    background-position: center 7%;
+  }
+}
+@media (min-width: 1400px) {
 }
