--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,6 +1,22 @@
+#navbar-main {
+  background-color: #309063;
+  padding: 20px;
+}
+
+.nav-link {
+  text-align: right;
+  margin-right: 6px;
+  margin-left: 6px;
+  font-size: 16px;
+}
+
+.navbar-brand img {
+  width: 30px;
+}
+
 #jumbo {
   width: 100%;
-  aspect-ratio: 1.1;
+  aspect-ratio: 1.4;
   text-align: center;
   background: url("/assets/hero-bg.png");
   background-size: 2000px;
@@ -10,7 +26,7 @@
 
 #jumbo h1 {
   color: white;
-  margin-top: 30%;
+  margin-top: 11%;
 }
 
 #jumbo p {
@@ -53,34 +69,82 @@ h3,
 }
 
 @media (min-width: 576px) {
-}
-@media (min-width: 768px) {
   #jumbo {
-    aspect-ratio: 1.3;
+    aspect-ratio: 1.8;
   }
   #jumbo h1 {
     color: white;
-    margin-top: 25%;
+    margin-top: 5%;
+  }
+}
+@media (min-width: 768px) {
+  #navbar-main {
+    padding: 30px;
+  }
+
+  .nav-link {
+    margin-right: 10px;
+    margin-left: 10px;
+    font-size: 18px;
+  }
+
+  .navbar-brand img {
+    width: 35px;
+  }
+
+  #jumbo {
+    aspect-ratio: 2.3;
+  }
+  #jumbo h1 {
+    color: white;
+    margin-top: 5%;
   }
 }
 @media (min-width: 992px) {
+  #navbar-main {
+    padding: 35px;
+  }
+
+  .nav-link {
+    margin-right: 15px;
+    margin-left: 15px;
+    font-size: 20px;
+  }
+
+  .navbar-brand img {
+    width: 40px;
+  }
+
   #jumbo {
-    aspect-ratio: 1.7;
+    aspect-ratio: 2.5;
     background-size: 200%;
   }
   #jumbo h1 {
     color: white;
-    margin-top: 20%;
+    margin-top: 7%;
   }
 }
 @media (min-width: 1200px) {
 }
 @media (min-width: 1400px) {
+  #navbar-main {
+    padding: 40px;
+  }
+
+  .nav-link {
+    margin-right: 18px;
+    margin-left: 18px;
+    font-size: 25px;
+  }
+
+  .navbar-brand img {
+  }
+
   #jumbo {
-    aspect-ratio: 2.2;
+    aspect-ratio: 2.7;
   }
   #jumbo h1 {
     color: white;
-    margin-top: 15%;
+    margin-top: 5%;
   }
 }
