--- a/src/components/icons/Card.css
+++ b/src/components/icons/Card.css
@@ -24,18 +24,15 @@
 
 .proj-card-title {
   color: #49a3aa;
-  font-size: 25px;
 }
 
 .proj-card-text {
-  font-size: 16px;
   white-space: pre-wrap;
 }
 
 .proj-card-btn {
   width: 200px;
   border-radius: 10px;
-  font-size: 15px;
   color: #fff;
   text-align: center;
   padding: 7px;
@@ -65,13 +62,11 @@
   }
 
   .proj-card-text {
-    font-size: 12px;
   }
 
   .proj-card-btn {
     width: 160px;
     border-radius: 10px;
-    font-size: 12px;
     padding: 6px;
   }
 }
@@ -92,49 +87,43 @@
   }
 
   .proj-card-title {
-    font-size: 34px;
   }
 
   .proj-card-text {
-    font-size: 18px;
   }
 
   .proj-card-btn {
     width: 160px;
     border-radius: 10px;
-    font-size: 15px;
     padding: 6px;
   }
 }
 @media (min-width: 992px) {
   .proj-card {
-    border-radius: 2vw;
-    margin: 3vw;
+    border-radius: 18px;
+    margin: 25px;
   }
 
   .proj-card-img-container {
-    width: 27vw;
-    height: 27vw;
+    width: 360px;
+    height: 360px;
   }
 
   .proj-card-body {
-    width: 27vw;
-    height: 27vw;
+    width: 360px;
+    height: 360px;
   }
 
   .proj-card-title {
-    font-size: 2.5vw;
   }
 
   .proj-card-text {
-    font-size: 1.4vw;
   }
 
   .proj-card-btn {
-    width: 17vw;
-    border-radius: 0.7vw;
-    font-size: 1.4vw;
-    padding: 0.5vw;
+    width: 160px;
+    border-radius: 10px;
+    padding: 6px;
   }
 }
 @media (min-width: 1200px) {
