--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -16,18 +16,18 @@
 }
 
 #jumbo {
-  width: 100vw;
+  width: 100%;
   height: 80vw;
   text-align: center;
   background: url("/assets/hero-bg.png");
-  background-size: 2000px;
+  background-size: 250%;
   background-repeat: no-repeat;
-  background-position: center 93%;
+  background-position: center -40vw;
 }
 
 #jumbo h1 {
   color: white;
-  margin-top: 8%;
+  margin-top: 13vw;
   font-size: 55px;
   letter-spacing: 2px;
 }
@@ -79,20 +79,13 @@ hr {
   background-color: #f8f8f8;
 }
 
-@media (min-width: 490px) {
-  #jumbo {
-    /* aspect-ratio: 1.8; */
-    height: 70vw;
-  }
-}
-
 @media (min-width: 576px) {
   #jumbo {
-    /* aspect-ratio: 1.8; */
-    height: 55vw;
+    height: 70vw;
+    background-position: center -50vw;
   }
   #jumbo h1 {
-    margin-top: 5%;
+    /* margin-top: 10%; */
   }
 }
 @media (min-width: 768px) {
@@ -112,8 +105,8 @@ hr {
   }
 
   #jumbo {
-    /* aspect-ratio: 2.3; */
     height: 43vw;
+    background-position: center -70vw;
   }
 
   #jumbo h1 {
@@ -144,12 +137,12 @@ hr {
   }
 
   #jumbo {
-    /* aspect-ratio: 2.5; */
-    height: 40vw;
-    background-size: 200%;
+    height: 500px;
+    background-size: 2500px;
+    background-position: center -600px;
   }
   #jumbo h1 {
-    margin-top: 3%;
+    margin-top: 70px;
   }
 }
 @media (min-width: 1200px) {
@@ -168,11 +161,11 @@ hr {
   }
 
   #jumbo {
-    /* aspect-ratio: 2.55; */
-    height: 40vw;
+    height: 650px;
+    background-position: center -550px;
   }
   #jumbo h1 {
-    margin-top: 4.7vw;
+    margin-top: 100px;
     font-size: 90px;
     letter-spacing: 10px;
   }
