--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,18 +1,33 @@
-#navbar-main {
+.navbar-bg {
   background-color: #309063;
-  padding: 20px;
-  padding-left: 10vw;
+}
+
+.navbar {
+}
+
+.nav-item {
+  margin: 1vw;
 }
 
 .nav-link {
-  text-align: right;
-  margin-right: 6px;
-  margin-left: 6px;
-  font-size: 16px;
+  font-size: 3.2vw;
 }
 
 .navbar-brand img {
   width: 30px;
+}
+
+#navbarDropdown img {
+  width: 30px;
+}
+
+.dropdown-menu {
+  width: auto;
+  min-width: 5rem;
+}
+
+.dropdown-item {
+  text-align: center;
 }
 
 #jumbo {
@@ -90,17 +105,17 @@ hr {
 }
 @media (min-width: 768px) {
   #navbar-main {
-    padding: 30px;
-    padding-left: 15vw;
   }
 
   .nav-link {
-    margin-right: 0px;
-    margin-left: 20px;
     font-size: 18px;
   }
 
   .navbar-brand img {
+    width: 35px;
+  }
+
+  #navbarDropdown img {
     width: 35px;
   }
 
@@ -122,17 +137,17 @@ hr {
 }
 @media (min-width: 992px) {
   #navbar-main {
-    padding: 35px;
-    padding-left: 20vw;
   }
 
   .nav-link {
-    margin-right: 0px;
-    margin-left: 30px;
     font-size: 20px;
   }
 
   .navbar-brand img {
+    width: 40px;
+  }
+
+  #navbarDropdown img {
     width: 40px;
   }
 
@@ -147,13 +162,9 @@ hr {
 }
 @media (min-width: 1200px) {
   #navbar-main {
-    padding: 40px;
-    padding-left: 22vw;
   }
 
   .nav-link {
-    margin-right: 0;
-    margin-left: 2vw;
     font-size: 23px;
   }
 
