--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -31,7 +31,7 @@
   width: 100%;
   height: 80vw;
   text-align: center;
-  background: url("/assets/hero-bg.png");
+  background: url("/assets/jumbo-bg.png");
   background-size: 250%;
   background-repeat: no-repeat;
   background-position: center -40vw;
