--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,5 +1,5 @@
 .dropdown-item:active {
-  background-color: #309063;
+  background-color: #ebf4ef;
 }
 
 .navbar-bg {
@@ -8,6 +8,7 @@
 
 .nav-item {
   margin: 1vw;
+  letter-spacing: 0.05em;
 }
 
 .nav-link {
@@ -44,18 +45,18 @@
 #jumbo h1 {
   color: white;
   margin-top: 13vw;
-  font-size: 55px;
-  letter-spacing: 2px;
+  font-size: 11vw;
 }
 
 #jumbo .h1-subtitle {
-  font-size: 14px;
   margin-top: 1px;
-  letter-spacing: 1.5px;
+  font-size: 3.1vw;
 }
 
 .h2-subtitle {
-  font-size: 17px;
+  font-size: 1.03em;
+  padding-left: 5vw;
+  padding-right: 5vw;
 }
 
 #jumbo p {
@@ -83,7 +84,7 @@ h2 {
 }
 
 p {
-  line-height: 2;
+  line-height: 1.8;
 }
 
 hr {
@@ -93,6 +94,16 @@ hr {
 
 #main-container {
   background-color: #f8f8f8;
+}
+
+@media (max-width: 575px) {
+  h2 {
+    font-size: 35px;
+  }
+
+  h3 {
+    font-size: 26px;
+  }
 }
 
 @media (min-width: 576px) {
@@ -125,12 +136,10 @@ hr {
   #jumbo h1 {
     margin-top: 1%;
     font-size: 70px;
-    letter-spacing: 3px;
   }
 
   #jumbo .h1-subtitle {
     font-size: 18px;
-    letter-spacing: 3px;
   }
 }
 @media (min-width: 992px) {
@@ -167,11 +176,9 @@ hr {
   #jumbo h1 {
     margin-top: 100px;
     font-size: 90px;
-    letter-spacing: 10px;
   }
   #jumbo .h1-subtitle {
     font-size: 22px;
-    letter-spacing: 4px;
   }
 
   .main-divs {
