--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+:root {
+  --color-primary: #3ea086;
+  --color-secondary: #3298a0;
+  --color-bg-main: #f8f8f8;
+  --color-bg-gray: #cccccc;
+  --color-white: #ffffff;
+  --color-black: #000000;
+}
+
 html {
   font-size: 62.5%;
 }
