--- a/src/index.css
+++ b/src/index.css
@@ -100,9 +100,13 @@ p {
   }
 }
 
-.App {
+#main-container {
   background-color: var(--color-bg-gray);
-  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+  width: 100vw;
 }
 
 /* Icons */
@@ -554,6 +558,78 @@ a {
 @media screen and (min-width: 1024px) {
   .project-items .item-project {
     margin-top: 4.8rem;
+  }
+}
+
+/* Contact Section */
+.section-contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: stretch;
+  height: 35.2rem;
+  background-size: 150rem auto;
+  background-position: top;
+}
+
+.section-contact h2 {
+  margin: 0;
+  margin-top: 9.6rem;
+  color: var(--color-white);
+}
+
+.section-contact .p-h2 {
+  color: var(--color-white);
+}
+
+.contact-items {
+  display: flex;
+  flex-direction: row;
+  margin-top: 3.2rem;
+}
+
+.contact-items .icon-with-container--contact {
+  margin: 0 1.2rem;
+}
+
+@media screen and (min-width: 768px) {
+  .section-contact {
+    height: 40.8rem;
+  }
+
+  .section-contact h2 {
+    margin-top: 14.4rem;
+  }
+
+  .section-contact .p-h2 {
+    white-space: nowrap;
+  }
+
+  .contact-items {
+    margin-top: 2.4rem;
+  }
+
+  .contact-items .icon-with-container--contact {
+    margin: 0 3.2rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .section-contact {
+    height: 57.6rem;
+    background-size: 250rem auto;
+  }
+
+  .section-contact h2 {
+    margin-top: 18.4rem;
+  }
+
+  .contact-items {
+    margin-top: 4.8rem;
+  }
+
+  .contact-items .icon-with-container--contact {
+    margin: 0 5.2rem;
   }
 }
 
