--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,13 @@ code {
     monospace;
 }
 
+h1 {
+  font-size: 4.5rem;
+  line-height: 5.6rem;
+  font-weight: normal;
+  letter-spacing: 0.23rem;
+}
+
 h2 {
   font-size: 3.5rem;
   line-height: 4rem;
@@ -52,12 +59,20 @@ p {
   white-space: pre-wrap;
 }
 
+.p-h1 {
+  font-size: 1.3rem;
+  line-height: 1.6rem;
+  letter-spacing: 0.06rem;
+  margin: 0;
+  margin-top: 0.8rem;
+}
+
 .p-h2 {
   font-size: 1.6rem;
   line-height: 2.4rem;
   letter-spacing: 0.12rem;
   margin: 0;
-  margin-top: 0.8rem;
+  margin-top: 1.6rem;
 }
 
 .p-h3 {
@@ -67,12 +82,36 @@ p {
 }
 
 @media screen and (min-width: 768px) {
+  h1 {
+    font-size: 6.4rem;
+    line-height: 8rem;
+    letter-spacing: 0.32rem;
+  }
+
+  .p-h1 {
+    font-size: 1.8rem;
+    line-height: 2.4rem;
+    letter-spacing: 0.1rem;
+    margin-top: 2.4rem;
+  }
+
   .p-h2 {
     margin-top: 1.6rem;
   }
 }
 
 @media screen and (min-width: 1024px) {
+  h1 {
+    font-size: 8rem;
+    line-height: 9.6rem;
+    letter-spacing: 0.4rem;
+  }
+
+  .p-h1 {
+    font-size: 2.6rem;
+    line-height: 4rem;
+    letter-spacing: 0.13rem;
+  }
   h2 {
     font-size: 4rem;
     line-height: 5.6rem;
@@ -422,6 +461,50 @@ a {
   .item-project__content {
     width: 44rem;
     height: 44rem;
+  }
+}
+
+/* Hero Section */
+.section-hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: stretch;
+  height: 27.2rem;
+  background-size: 150rem auto;
+  background-position: bottom;
+}
+
+.section-hero h1 {
+  margin: 0;
+  margin-top: 2.4rem;
+  color: var(--color-white);
+}
+
+.section-hero .p-h1 {
+  color: var(--color-white);
+}
+
+@media screen and (min-width: 768px) {
+  .section-hero {
+    height: 30.4rem;
+  }
+
+  .section-hero h1 {
+    margin: 0;
+    margin-top: 1.6rem;
+    color: var(--color-white);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .section-hero {
+    height: 44.6rem;
+    background-size: 250rem auto;
+  }
+
+  .section-hero h1 {
+    margin-top: 5.6rem;
   }
 }
 
