--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --color-bg-gray: #cccccc;
   --color-white: #ffffff;
   --color-black: #000000;
+  --color-light: #f3f3f3;
   --color-primary--light: #eaf5f5;
 }
 
@@ -461,6 +462,51 @@ a {
   .item-project__content {
     width: 44rem;
     height: 44rem;
+  }
+}
+
+/* Dropdown */
+
+.dropdown {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: var(--color-white);
+  width: 8.8rem;
+  padding: 0.8rem 0;
+  border-radius: 0.8rem;
+}
+
+.dropdown a {
+  font-size: 1.6rem;
+  line-height: 1.6rem;
+  text-align: center;
+  color: var(--color-black);
+  padding: 0.8rem;
+  align-self: stretch;
+}
+
+.dropdown a:hover {
+  background-color: var(--color-light);
+}
+
+@media screen and (min-width: 768px) {
+  .dropdown {
+    width: 10.4rem;
+    padding: 1.2rem 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .dropdown {
+    width: 12.8rem;
+    height: 14.4rem;
+  }
+
+  .dropdown a {
+    font-size: 1.9rem;
+    line-height: 2.4rem;
   }
 }
 
