--- a/src/index.css
+++ b/src/index.css
@@ -196,8 +196,8 @@ p {
 }
 
 .icon--project {
-  width: 15.2rem;
-  height: 15.2rem;
+  width: 29.6rem;
+  height: 29.6rem;
 }
 
 .icon--contact {
@@ -227,8 +227,8 @@ p {
   }
 
   .icon--project {
-    width: 15.2rem;
-    height: 15.2rem;
+    width: 29.6rem;
+    height: 29.6rem;
   }
 
   .icon--contact {
@@ -259,8 +259,8 @@ p {
   }
 
   .icon--project {
-    width: 20rem;
-    height: 20rem;
+    width: 40rem;
+    height: 40rem;
   }
 
   .icon--contact {
@@ -491,7 +491,7 @@ a {
     height: 29.6rem;
   }
 
-  .item-project:nth-child(even) {
+  .item-project--reverse {
     flex-direction: row-reverse;
   }
 }
@@ -817,11 +817,7 @@ a {
 }
 
 .project-items .item-project {
-  margin-top: 4rem;
-}
-
-.project-items .item-project:first-child {
-  margin-top: 0;
+  margin-bottom: calc(4rem + 250px);
 }
 
 @media screen and (min-width: 768px) {
@@ -832,7 +828,7 @@ a {
 
 @media screen and (min-width: 1024px) {
   .project-items .item-project {
-    margin-top: 4.8rem;
+    margin-bottom: calc(4.8rem + 300px);
   }
 }
 
