Implement hero_bg animation to HeroSection
new file:   src/assets/animations/hero_bg.json
- Add new lottie hero_bg

modified:   src/components/PageHome.tsx
- Refactor NavBar

modified:   src/index.css
- #main-container
  + Mod width 100vw -> 100%, so that scrollbar x won't show
- .nav-bar
  + Remove background color
- .section-hero
  + Remove background related styles
  + Mod height
- .section-hero h1
  + Adjust margin for h1
  + Add z-index for h1
- .section-hero .p-h1
  + Add z-index for h1
- #hero_bg
  + New styles for hero_bg

modified:   src/mainData.model.ts
- Mod type AnimeName
  + Add hero-bg

modified:   src/utils/animeFns.ts
- Add "hero_bg" to loadAnimationData

modified:   src/components/SectionHero.tsx
- Implement #bg_hero anime
- Add Lottie animation for bg_hero
  + Auto play segment [0, 15] for starting anime
  + Listen for "complete", play segment [16, 34] for loop anime
    every 4 seconds
- Add ScrollTrigger animation for scale and translateY
  + Trigger by "#page-home__section-hero"
  + Timeline: scale to 1.1 and move down 30
- Add #hero_bg and remove background image import

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
   --color-secondary: #3298a0;
   --color-bg-main: #f8f8f8;
   --color-bg-gray: #cccccc;
-  --color-bg-nav: #309063;
   --color-white: #ffffff;
   --color-black: #000000;
   --color-light: #f3f3f3;
@@ -155,7 +154,7 @@ p {
   flex-direction: column;
   align-items: center;
   overflow: hidden;
-  width: 100vw;
+  width: 100%;
 }
 
 #main-container > section:first-of-type {
@@ -604,7 +603,6 @@ a {
   align-items: center;
   align-self: stretch;
   padding: 2.4rem;
-  background: var(--color-bg-nav);
   overflow: visible;
   z-index: 1;
 }
@@ -662,37 +660,42 @@ a {
   flex-direction: column;
   align-items: center;
   align-self: stretch;
-  height: 27.2rem;
-  background-size: 150rem auto;
-  background-position: bottom;
+  height: 40rem;
+  position: relative;
 }
 
 .section-hero h1 {
+  z-index: 1;
   margin: 0;
-  margin-top: 2.4rem;
+  margin-top: 8rem;
   color: var(--color-white);
 }
 
 .section-hero .p-h1 {
+  z-index: 1;
   color: var(--color-white);
+}
+
+.section-hero #hero_bg {
+  bottom: 0;
+  position: absolute;
+  width: 270rem;
 }
 
 @media screen and (min-width: 768px) {
   .section-hero {
-    height: 30.4rem;
+    height: 44.8rem;
   }
 
   .section-hero h1 {
     margin: 0;
     margin-top: 1.6rem;
-    color: var(--color-white);
   }
 }
 
 @media screen and (min-width: 1024px) {
   .section-hero {
-    height: 44.6rem;
-    background-size: 250rem auto;
+    height: 63rem;
   }
 
   .section-hero h1 {
