--- a/src/index.css
+++ b/src/index.css
@@ -823,7 +823,7 @@ a {
 }
 
 .project-items .item-project {
-  margin-bottom: calc(4rem + 250px);
+  margin-bottom: 4rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -834,7 +834,7 @@ a {
 
 @media screen and (min-width: 1024px) {
   .project-items .item-project {
-    margin-bottom: calc(4.8rem + 300px);
+    margin-bottom: 4.8rem;
   }
 }
 
