Implement contact section bg svg
new file:   src/assets/svgs/bg-btm.svg
- Add new svg file for bottom bg

new file:   src/components/SvgBg.tsx
- Add new component SvgBg
- Import bg-btm.svg as SvgBg.Btm

modified:   src/components/SectionContact.tsx
- Implemented SvgBg.Btm, wrapped with div#contact-bg
- Wrapped other contents under div.section-contact__contents

modified:   src/index.css
- Remove background styles settings
- Set #contact-bg to absolute as background
- Set z-index: 1 for other contents, so that it won't be blocked
  by #contact-bg

--- a/src/index.css
+++ b/src/index.css
@@ -845,8 +845,8 @@ a {
   align-items: center;
   align-self: stretch;
   height: 35.2rem;
-  background-size: 150rem auto;
-  background-position: top;
+  position: relative;
+  overflow: hidden;
 }
 
 .section-contact h2 {
@@ -857,6 +857,18 @@ a {
 
 .section-contact .p-h2 {
   color: var(--color-white);
+}
+
+.section-contact .section-contact__contents {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: stretch;
+  z-index: 1;
+}
+
+.section-contact #contact-bg {
+  position: absolute;
 }
 
 .contact-items {
