Implement hero section bg svg
new file:   src/assets/svgs/bg-top.svg
- Add new svg file for top bg

modified:   src/components/SvgBg.tsx
- Import bg-top.svg as SvgBg.Top

modified:   src/components/SectionHero.tsx
- Refactor #hero_bg -> #hero-bg
- Implemented SvgBg.Top, put it under #hero-bg
- Wrapped other contents under div.section-contact__contents

modified:   src/index.css
- Refactor #hero_bg -> #hero-bg
- Set styles for .section-contact__contents
- Adjust z-index value for .nav-bar, .section-hero__contents and
  #hero-bg

--- a/src/index.css
+++ b/src/index.css
@@ -605,7 +605,7 @@ a {
   align-self: stretch;
   padding: 2.4rem;
   overflow: visible;
-  z-index: 1;
+  z-index: 2;
 }
 
 .nav-bar__translate {
@@ -665,19 +665,25 @@ a {
   position: relative;
 }
 
-.section-hero #hero_poyao-wang {
+.section-hero .section-hero__contents {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: stretch;
   z-index: 1;
+}
+
+.section-hero #hero_poyao-wang {
   margin: 0;
   margin-top: 6rem;
   height: 8.4rem;
 }
 
 .section-hero .p-h1 {
-  z-index: 1;
   color: var(--color-white);
 }
 
-.section-hero #hero_bg {
+.section-hero #hero-bg {
   bottom: 0;
   position: absolute;
   width: 270rem;
