--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,14 @@
   --color-black: #000000;
   --color-light: #f3f3f3;
   --color-primary--light: #eaf5f5;
+  --border-testing: 0px solid yellow;
 }
 
 *,
 *::after,
 *::before {
   box-sizing: border-box;
+  border: var(--border-testing);
 }
 
 /* Typography */
@@ -74,7 +76,7 @@ p {
   line-height: 2.4rem;
   letter-spacing: 0.12rem;
   margin: 0;
-  margin-top: 1.6rem;
+  margin-top: 0.8rem;
 }
 
 .p-h3 {
@@ -677,6 +679,7 @@ a {
   margin: 0;
   margin-top: 6rem;
   height: 8.4rem;
+  width: 100%;
 }
 
 .section-hero .p-h1 {
@@ -850,14 +853,13 @@ a {
   flex-direction: column;
   align-items: center;
   align-self: stretch;
-  height: 35.2rem;
+  height: 48rem;
   position: relative;
   overflow: hidden;
 }
 
 .section-contact h2 {
   margin: 0;
-  margin-top: 9.6rem;
   color: var(--color-white);
 }
 
@@ -866,6 +868,7 @@ a {
 }
 
 .section-contact .section-contact__contents {
+  margin-top: 16.4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -875,12 +878,13 @@ a {
 
 .section-contact #contact-bg {
   position: absolute;
+  top: 15px;
 }
 
 .contact-items {
   display: flex;
   flex-direction: row;
-  margin-top: 3.2rem;
+  margin-top: 5.2rem;
 }
 
 .contact-items .icon-with-container--contact {
@@ -889,11 +893,7 @@ a {
 
 @media screen and (min-width: 768px) {
   .section-contact {
-    height: 40.8rem;
-  }
-
-  .section-contact h2 {
-    margin-top: 14.4rem;
+    height: 47.6rem;
   }
 
   .section-contact .p-h2 {
@@ -901,7 +901,7 @@ a {
   }
 
   .contact-items {
-    margin-top: 2.4rem;
+    margin-top: 5.2rem;
   }
 
   .contact-items .icon-with-container--contact {
@@ -911,16 +911,11 @@ a {
 
 @media screen and (min-width: 1024px) {
   .section-contact {
-    height: 57.6rem;
-    background-size: 250rem auto;
-  }
-
-  .section-contact h2 {
-    margin-top: 18.4rem;
+    height: 63rem;
   }
 
   .contact-items {
-    margin-top: 4.8rem;
+    margin-top: 8.4rem;
   }
 
   .contact-items .icon-with-container--contact {
